update send messenger method and more